--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
       (function() {
         var s = document.createElement('script');
-        s.src = 'https://de66610a-5c19-4559-9ecf-ce4f93bde6c4-00-fhw24gm4fh4k.riker.replit.dev/tracking.js?f=be7ad872-efab-44ae-8fc8-419855c98a45';
+        s.src = 'https://dalhy.com/tracking.js?f=2bfbeb36-59ce-48d4-906e-2e7e7390d317';
         s.async = true;
         document.head.appendChild(s);
       })();
