--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
       })();
     </script>
     
+    <!-- Novo TrackPixel Script -->
+    <script>
+      (function() {
+        var s = document.createElement('script');
+        s.src = 'https://de66610a-5c19-4559-9ecf-ce4f93bde6c4-00-fhw24gm4fh4k.riker.replit.dev/tracking.js?f=bc5a5888-d548-43e6-b01d-ce43c25f156e';
+        s.async = true;
+        document.head.appendChild(s);
+      })();
+    </script>
+    
     <!-- Meta Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
